--- a/src/app/modules/admin/components/admin-service/admin-service.component.html
+++ b/src/app/modules/admin/components/admin-service/admin-service.component.html
@@ -71,7 +71,7 @@
             </div>
             <h5>الأخبار</h5>
 
-            <a href="#" class="btn btn-primary text-white">
+            <a routerLink="/main/news/list" class="btn btn-primary text-white">
               <span>التفاصيل</span>
               <img src="/assets/img/leftwhitearrow.svg" alt="">
             </a>
