--- a/src/app/modules/shared/components/main/main.component.scss
+++ b/src/app/modules/shared/components/main/main.component.scss
@@ -1,6 +1,6 @@
-.main-container {
- .outlet-container {
-  height: calc(100vh - 80px);
-  overflow: auto;
- } 
-}
+// .main-container {
+//  .outlet-container {
+//   height: calc(100vh - 80px);
+//   overflow: auto;
+//  } 
+// }
