--- a/src/app/modules/dashboard/component/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/component/dashboard/dashboard.component.html
@@ -116,7 +116,7 @@
               </div>
             </div>
             <a routerLink="/main/dashboard/tawasol" class="btn btn-default bg-brown ms-auto fs-15 fw-bold position-absolute">
-              عرض الجميع
+              {{'view_all' | translate}}
             </a>
           </div>
         </div>
@@ -137,7 +137,7 @@
             </div>
           </div>
           <div class="boxContent d-flex justify-content-center mt-3">
-            <a href="#" class="btn btn-default bg-light-green text-green p-2">الذهاب الى نظام مدار <svg
+            <a href="#" class="btn btn-default bg-light-green text-green p-2">{{'go_to_a_managed_system' | translate}} <svg
                 xmlns="http://www.w3.org/2000/svg" width="8.017" height="14.035" viewBox="0 0 8.017 14.035">
                 <path id="Path_13856" data-name="Path 13856" d="M644.169,132.343l-5.6,5.6,5.6,5.6"
                   transform="translate(-637.566 -130.929)" fill="none" stroke="#32835b" stroke-linecap="round"
@@ -159,7 +159,7 @@
             </div>
           </div>
           <div class="boxContent d-flex justify-content-center mt-3">
-            <a href="#" class="btn btn-default bg-light text-brown p-2">منصة الدعم الفني
+            <a href="#" class="btn btn-default bg-light text-brown p-2">{{'technical_support_platform' | translate}}
               <svg xmlns="http://www.w3.org/2000/svg" width="8.017" height="14.035" viewBox="0 0 8.017 14.035">
                 <path id="Path_13856" data-name="Path 13856" d="M644.169,132.343l-5.6,5.6,5.6,5.6"
                   transform="translate(-637.566 -130.929)" fill="none" stroke="#55565A" stroke-linecap="round"
@@ -178,7 +178,7 @@
             </div>
           </div>
           <div class="boxContent d-flex justify-content-center mt-3">
-            <a href="#" class="btn btn-default bg-light-green text-green p-2">إنشاء طلب طور جديد <svg
+            <a href="#" class="btn btn-default bg-light-green text-green p-2">{{'create_a_new_mode_request' | translate }}<svg
                 xmlns="http://www.w3.org/2000/svg" width="8.017" height="14.035" viewBox="0 0 8.017 14.035">
                 <path id="Path_13856" data-name="Path 13856" d="M644.169,132.343l-5.6,5.6,5.6,5.6"
                   transform="translate(-637.566 -130.929)" fill="none" stroke="#32835b" stroke-linecap="round"
@@ -378,9 +378,9 @@
               <div class="headingIcon rounded-circle bg-orange d-flex align-items-center justify-content-center">
                 <img src="/assets/img/docs.svg" class="img-fluid p-2">
               </div>
-              <h2 class="fs-20 fw-bold mb-0">مكتبة المستندات</h2>
+              <h2 class="fs-20 fw-bold mb-0">{{'document_library' | translate }}</h2>
             </div>
-            <a href="" class="btn btn-green">عرض الكل</a>
+            <a routerLink="/main/dashboard/shared-docs" class="btn btn-green">{{'view_all' | translate }}</a>
           </div>
           <div class="boxContent bg-white shadow-none">
             <ul class="list-group list-unstyled mt-4">
