--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -411,10 +411,10 @@ p {
   opacity: 0.8;
   background: url(../img/arrowleftcircle.svg) no-repeat center center;
 }
-.main-carousel .item {
+.main-carouselHeight .main-carousel .item {
   border-radius: 20px;
   overflow: hidden;
-  max-height: 250px;
+  max-height: 240px;
 }
 .main-carousel .item .carouselContent {
   background-color: rgba(0, 0, 0, 0.5);
@@ -569,8 +569,12 @@ p {
 .btn.btn-default svg {
   transform: scale(-1, -1);
 }
-.boxContent p {
+.boxContent p{
   line-height: 18px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  width: 100%;
+  overflow: hidden;
 }
 .owl-carousel.box-carousel .owl-nav {
   position: absolute;
@@ -624,7 +628,7 @@ p {
   background-color: #704e5f;
 }
 .evntslide {
-  max-height: 160px;
+  max-height: 145px;
 }
 .owl-carousel.evntslide .owl-nav {
   position: absolute;
@@ -1347,7 +1351,7 @@ a {
 .main-carouselHeight{
   height: 250px;
   overflow: hidden;
-  margin-bottom: 10px;
+  margin-bottom: 0px;
 }
 .bottomButton{
   height: 40px;
