--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -188,13 +188,13 @@
     </form>
     <ul class="nav flex-column p-0 my-3">
       <li class="nav-item">
-        <a class="nav-link py-2 active" aria-current="page" href="#">اسم النظام هنا اسم النظام هنا </a>
+        <a class="nav-link py-2 active" aria-current="page" href="#">اسم النظام هنا اسم النظام هنا <span class="addBookmark mx-2"></span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link py-2" href="#">اسم النظام هنا اسم النظام هنا </a>
+        <a class="nav-link py-2" href="#">اسم النظام هنا اسم النظام هنا <span class="addBookmark mx-2"></span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link py-2" href="#">اسم النظام هنا اسم النظام هنا </a>
+        <a class="nav-link py-2" href="#">اسم النظام هنا اسم النظام هنا <span class="addBookmark mx-2"></span></a>
       </li>
     </ul>
   </div>
