--- a/src/app/modules/dashboard/component/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/component/dashboard/dashboard.component.html
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="col-12 bottomButton">
-            <a href="#" class="btn btn-default w-100 p-2 bg-green mx-auto fs-15 fw-bold">
+            <a routerLink="/main/dashboard/news-list" class="btn btn-default w-100 p-2 bg-green mx-auto fs-15 fw-bold">
               {{'view_all_news' | translate }}
             </a>
           </div>
